# Ogm2Pgbm

./: Dockerfile  LICENSE  README.md  autorun.sh  ros_entrypoint.sh
amcl/examples/: amcl.launch  amcl.rviz  amcl.yaml
cartographer_git/src/: .rosinstall  .rosinstall.bak
cartographer_git/src/cartographer/: CMakeLists.txt  package.xml
cartographer_ros/configuration_files/: demo_2d.rviz  my_robot.lua  my_robot_localization.lua  ogm2pgbm_my_robot.lua
cartographer_ros/launch/: demo_my_robot.launch  demo_my_robot_localization.launch  offline_my_robot.launch  ogm2pgbm_my_robot.launch
gmcl/examples/: gmcl.rviz  gmcl_diff.launch  gmcl_omni.launch
gmcl_carto/: gmcl_carto.py  gmcl_slamtoolbox.py
ogm2pgbm/: CMakeLists.txt  package.xml
ogm2pgbm/examples/: ogm2pgbm.launch  ogm2pgbm.rviz
ogm2pgbm/scripts/: skeleton.py  trj_plnr.py
ogm2pgbm/scripts/WavefrontCPP/: wavefront_coverage_path_planner.py
slam_toolbox/: lifelong.launch  localization.launch  ogm2pgbm.launch  online_sync.launch
slam_toolbox/config/: mapper_params_lifelong.yaml  mapper_params_localization.yaml  mapper_params_ogm2pgbm.yaml  mapper_params_online_sync.yaml  slam_toolbox_default.rviz
slam_toolbox/preprocessing/: TFFilter.py  bag.py
workspace/: WithoutPeopleEmptyNewStart.bag.pbstream
workspace/map/: OGM_empty.pgm  OGM_empty.yaml  gazeboMap.pgm  gazeboMap.yaml
